--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,131 @@
-body {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+:root {
+  --primary-color: #febb00;
+}
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+}
+@layer base {
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  input {
+    background: transparent;
+    outline: none;
+    border: none;
+  }
+  i {
+    font-size: 22px;
+  }
+  iframe {
+    width: 100%;
+    height: 100%;
+  }
+}
+@layer components {
+  .nav-item {
+    position: relative;
+    padding: 6px;
+    margin: 0 12px;
+  }
+  .nav-item.active {
+    color: var(--primary-color);
+  }
+  .nav-item::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    height: 2px;
+    left: 50%;
+    background-color: var(--primary-color);
+    transform: translateX(-50%);
+    transition: width 0.2s ease;
+    width: 0;
+  }
+  .nav-item.active::before {
+    content: "";
+    width: 100%;
+  }
+  .nav-item:hover::before {
+    content: "";
+    width: 100%;
+  }
+  .modal-slider::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    opacity: 0.8;
+    background-color: #000;
+    z-index: -100;
+  }
+  .btn {
+    border-radius: 30px;
+    transition: all 0.4s linear;
+  }
+  .btn.btn-watch {
+    font-size: 24px;
+    padding: 10px 42px;
+    transform: translateY(-100px);
+    opacity: 0;
+  }
+  .btn.outline-btn {
+    outline: 4px solid white;
+  }
+  .btn.small {
+  }
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@layer utilities {
+  .scrollbar::-webkit-scrollbar {
+    width: 12px;
+    height: 20px;
+  }
+
+  .scrollbar::-webkit-scrollbar-track {
+    background: #616161;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb {
+    background: #888888;
+  }
+  .text-color {
+    color: #e5e5e5;
+  }
+
+  .primary-color {
+    color: var(--primary-color);
+  }
+  .bg-header {
+    background: linear-gradient(
+      180deg,
+      #0c0c0c 20%,
+      rgba(12, 12, 12, 0.8) 65%,
+      rgba(12, 12, 12, 0)
+    );
+  }
+  .bg-title {
+    background: linear-gradient(
+      90deg,
+      rgba(254, 187, 0, 0.6),
+      rgba(254, 187, 0, 0)
+    );
+  }
+  .shadow-btn {
+    box-shadow: 0 0 10px 2px var(--primary-color);
+  }
+  .rate {
+    color: #ff8040;
+  }
+  .shadow-1 {
+    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+  }
 }
